--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,12 @@
     "license": "MIT",
     "require": {
         "php": ">=5.3.0",
-        "guzzlehttp/guzzle": "^6.3",
-        "cache/filesystem-adapter": "^1.0",
         "zendframework/zend-config": "^2.6",
         "monolog/monolog": "^1.22",
-        "symfony/var-dumper": "^3.2"
+        "symfony/var-dumper": "^3.2",
+        "cache/filesystem-adapter": "^1.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "mrclay/minify": "~3.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
